--- a/app/views/gridion/sequencing_runs/_form.html.erb
+++ b/app/views/gridion/sequencing_runs/_form.html.erb
@@ -16,7 +16,7 @@
     </div>
     <div class="form-group" >
       <%= f.label :state %>
-      <%= f.select :state, SequencingRun.states.keys, {}, { class: 'form-control' } %>
+      <%= f.select :state, Gridion::SequencingRun.states.keys, {}, { class: 'form-control' } %>
     </div>
     <div class="row">
       <div class="col-md-12">
