--- a/app/views/gridion/sequencing_runs/index.html.erb
+++ b/app/views/gridion/sequencing_runs/index.html.erb
@@ -1,7 +1,7 @@
 <div class="title row">
   <div class="col">
     <h2>
-    Sequencing Runs <%= link_to new_sequencing_run_path, { class: 'btn btn-primary btn-large pull-right', role: 'button' } do %>
+    Sequencing Runs <%= link_to new_gridion_sequencing_run_path, { class: 'btn btn-primary btn-large pull-right', role: 'button' } do %>
         <%= fa_icon "plus" %> New Sequencing Run
       <% end %>
     </h2>
@@ -23,9 +23,9 @@
           <td><%= sequencing_run.experiment_name %></td>
           <td><%= sequencing_run.instrument_name %></td>
           <td><%= sequencing_run.created_at.to_date.to_s(:default) %></td>
-          <td><%= link_to 'Show', sequencing_run_path(sequencing_run) %></td>
-          <td><%= link_to 'Edit', edit_sequencing_run_path(sequencing_run) %></td>
-          <td><%= link_to 'Delete', sequencing_run_path(sequencing_run), method: :delete%>
+          <td><%= link_to 'Show', gridion_sequencing_run_path(sequencing_run) %></td>
+          <td><%= link_to 'Edit', edit_gridion_sequencing_run_path(sequencing_run) %></td>
+          <td><%= link_to 'Delete', gridion_sequencing_run_path(sequencing_run), method: :delete%>
         </tr>
       <% end %>
     </tbody>
